--- a/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/coordinador/FXMLPrincipalCoordinador.fxml
+++ b/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/coordinador/FXMLPrincipalCoordinador.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.FXMLPrincipalCoordinadorController">
+<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.coordinador.FXMLPrincipalCoordinadorController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#18529d" height="62.0" stroke="#18529d" strokeType="INSIDE" width="1280.0" />
       <Label layoutX="14.0" layoutY="10.0" prefHeight="46.0" prefWidth="981.0" text="Sistema de Prácticas Profesionales de Ingeniería de Software" textFill="WHITE">
