--- a/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/estudiante/FXMLPrincipalEstudiante.fxml
+++ b/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/estudiante/FXMLPrincipalEstudiante.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.FXMLPrincipalEstudianteController">
+<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.estudiante.FXMLPrincipalEstudianteController">
    <children>
       <ImageView fx:id="imgFotoPerfil" fitHeight="134.0" fitWidth="143.0" layoutX="34.0" layoutY="93.0" pickOnBounds="true" preserveRatio="true">
          <image>
