--- a/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/profesoree/FXMLPrincipalProfesorEE.fxml
+++ b/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/profesoree/FXMLPrincipalProfesorEE.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.FXMLPrincipalProfesorEEController">
+<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.profesoree.FXMLPrincipalProfesorEEController">
    <children>
       <Separator layoutX="35.0" layoutY="255.0" prefHeight="7.0" prefWidth="1210.0" style="-fx-border-color: 000000;" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#18529d" height="62.0" stroke="#18529d" strokeType="INSIDE" width="1280.0" />
