--- a/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/coordinador/FXMLPrincipalCoordinador.fxml
+++ b/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/coordinador/FXMLPrincipalCoordinador.fxml
@@ -19,7 +19,7 @@
       </Label>
       <ImageView fx:id="imgFotoPerfil" fitHeight="134.0" fitWidth="143.0" layoutX="29.0" layoutY="90.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../recursos/fotoPerfilDefault.png" />
+            <Image url="@../../recursos/fotoPerfilDefault.png" />
          </image>
       </ImageView>
       <Label fx:id="lblNombreCoordinador" layoutX="191.0" layoutY="90.0" prefHeight="33.0" prefWidth="450.0" text="Ángel Juan Sánchez García">
@@ -27,9 +27,9 @@
             <Font name="Gill Sans MT" size="28.0" />
          </font>
       </Label>
-      <Button layoutX="1039.0" layoutY="90.0" mnemonicParsing="false" onAction="#clicBtnCerrarSesion" style="-fx-background-color: #28ad56;" text="Cerrar Sesión" textFill="WHITE">
+      <Button layoutX="1074.0" layoutY="90.0" mnemonicParsing="false" onAction="#clicBtnCerrarSesion" style="-fx-background-color: #28ad56;" text="Cerrar Sesión" textFill="WHITE">
          <font>
-            <Font name="Gill Sans MT" size="30.0" />
+            <Font name="Gill Sans MT" size="25.0" />
          </font>
       </Button>
       <Button layoutX="803.0" layoutY="299.0" mnemonicParsing="false" onAction="#clicBtnRegistrarResponsableProyecto" prefHeight="53.0" prefWidth="447.0" style="-fx-background-color: #28ad56;" text="Registrar Responsable de Proyecto" textFill="WHITE">
@@ -77,5 +77,10 @@
             <Font name="Gill Sans MT" size="28.0" />
          </font>
       </Label>
+      <Button layoutX="1074.0" layoutY="174.0" mnemonicParsing="false" onAction="#clicBtnMiPerfil" prefHeight="47.0" prefWidth="176.0" style="-fx-background-color: #28ad56;" text="Mi Perfil" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="25.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
