--- a/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/evaluador/FXMLPrincipalEvaluador.fxml
+++ b/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/evaluador/FXMLPrincipalEvaluador.fxml
@@ -24,7 +24,7 @@
       </Label>
       <ImageView fx:id="imgFotoPerfil" fitHeight="134.0" fitWidth="143.0" layoutX="28.0" layoutY="89.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../recursos/fotoPerfilDefault.png" />
+            <Image url="@../../recursos/fotoPerfilDefault.png" />
          </image>
       </ImageView>
       <Label layoutX="13.0" layoutY="9.0" prefHeight="46.0" prefWidth="981.0" text="Sistema de Prácticas Profesionales de Ingeniería de Software" textFill="WHITE">
@@ -33,14 +33,19 @@
          </font>
       </Label>
       <Separator layoutX="30.0" layoutY="246.0" prefHeight="0.0" prefWidth="1220.0" />
-      <Button layoutX="1039.0" layoutY="89.0" mnemonicParsing="false" onAction="#clicBtnCerrarSesion" style="-fx-background-color: #28ad56;" text="Cerrar Sesión" textFill="WHITE">
+      <Button layoutX="1074.0" layoutY="89.0" mnemonicParsing="false" onAction="#clicBtnCerrarSesion" style="-fx-background-color: #28ad56;" text="Cerrar Sesión" textFill="WHITE">
          <font>
-            <Font name="Gill Sans MT" size="30.0" />
+            <Font name="Gill Sans MT" size="25.0" />
          </font>
       </Button>
       <Button layoutX="369.0" layoutY="402.0" mnemonicParsing="false" onAction="#clicBtnEvaluarPresentacionEstudiante" style="-fx-background-color: #28ad56;" text="Evaluar Presentación de Estudiante" textFill="WHITE">
          <font>
             <Font name="Gill Sans MT" size="35.0" />
+         </font>
+      </Button>
+      <Button layoutX="1072.0" layoutY="173.0" mnemonicParsing="false" onAction="#clicBtnMiPerfil" prefHeight="47.0" prefWidth="181.0" style="-fx-background-color: #28ad56;" text="Mi Perfil" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="25.0" />
          </font>
       </Button>
    </children>
