--- a/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/profesoree/FXMLPrincipalProfesorEE.fxml
+++ b/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/profesoree/FXMLPrincipalProfesorEE.fxml
@@ -15,7 +15,7 @@
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#18529d" height="62.0" stroke="#18529d" strokeType="INSIDE" width="1280.0" />
       <ImageView fx:id="imgFotoPerfil" fitHeight="134.0" fitWidth="143.0" layoutX="35.0" layoutY="95.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../recursos/fotoPerfilDefault.png" />
+            <Image url="@../../recursos/fotoPerfilDefault.png" />
          </image>
       </ImageView>
       <Label layoutX="14.0" layoutY="8.0" prefHeight="46.0" prefWidth="997.0" text="Sistema de Prácticas Profesionales de Ingeniería de Software" textFill="WHITE">
@@ -23,9 +23,9 @@
             <Font name="Gill Sans MT" size="40.0" />
          </font>
       </Label>
-      <Button layoutX="1034.0" layoutY="95.0" mnemonicParsing="false" onAction="#clicBtnCerrarSesion" style="-fx-background-color: #28ad56;" text="Cerrar Sesión" textFill="WHITE">
+      <Button layoutX="1069.0" layoutY="95.0" mnemonicParsing="false" onAction="#clicBtnCerrarSesion" style="-fx-background-color: #28ad56;" text="Cerrar Sesión" textFill="WHITE">
          <font>
-            <Font name="Gill Sans MT" size="30.0" />
+            <Font name="Gill Sans MT" size="25.0" />
          </font>
       </Button>
       <Button layoutX="399.0" layoutY="349.0" mnemonicParsing="false" onAction="#clicBtnConsultarExpedienteEstudiante" style="-fx-background-color: #28ad56;" text="Consultar Expediente del Estudiante" textFill="WHITE">
@@ -48,5 +48,10 @@
             <Font name="Gill Sans MT" size="28.0" />
          </font>
       </Label>
+      <Button layoutX="1067.0" layoutY="179.0" mnemonicParsing="false" onAction="#clicBtnMiPerfil" prefHeight="47.0" prefWidth="181.0" style="-fx-background-color: #28ad56;" text="Mi Perfil" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="25.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
