--- a/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/coordinador/FXMLRegistrarOrganizacionVinculada.fxml
+++ b/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/coordinador/FXMLRegistrarOrganizacionVinculada.fxml
@@ -1,11 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.shape.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.coordinador.FXMLRegistrarOrganizacionVinculadaController">
-    
+<AnchorPane id="AnchorPane" maxHeight="490.0" maxWidth="700.0" minHeight="490.0" minWidth="700.0" prefHeight="490.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.coordinador.FXMLRegistrarOrganizacionVinculadaController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#18529d" height="60.0" stroke="#18529d" strokeType="INSIDE" width="728.0" />
+      <Label layoutX="14.0" layoutY="7.0" prefHeight="46.0" prefWidth="579.0" text="Ingrese los datos de la organización vinculada" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="30.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtfRazonSocial" layoutX="37.0" layoutY="148.0" prefHeight="39.0" prefWidth="300.0" promptText="Hightek SA de CV">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtfDomicilioFiscal" layoutX="364.0" layoutY="148.0" prefHeight="39.0" prefWidth="300.0" promptText="Av. Xalapa #2000, Xalapa, Ver.">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtfTelefono" layoutX="38.0" layoutY="289.0" prefHeight="39.0" prefWidth="300.0" promptText="228 605 0387">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtfCorreoElectronico" layoutX="364.0" layoutY="289.0" prefHeight="39.0" prefWidth="300.0" promptText="contacto@hightek.com">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </TextField>
+      <Label layoutX="37.0" layoutY="120.0" text="Razón Social">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="364.0" layoutY="120.0" text="Domicilio Fiscal">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="38.0" layoutY="260.0" text="Teléfono">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="364.0" layoutY="260.0" text="Correo Electrónico">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </Label>
+      <Button layoutX="128.0" layoutY="386.0" mnemonicParsing="false" onAction="#clicBtnGuardar" style="-fx-background-color: #28ad56;" text="Guardar" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="25.0" />
+         </font>
+      </Button>
+      <Button layoutX="446.0" layoutY="386.0" mnemonicParsing="false" onAction="#clicBtnCancelar" style="-fx-background-color: #28ad56;" text="Cancelar" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="25.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
