--- a/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/coordinador/FXMLListaOrganizacionesVinculadas.fxml
+++ b/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/coordinador/FXMLListaOrganizacionesVinculadas.fxml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.shape.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.coordinador.FXMLListaOrganizacionesVinculadasController">
-    
+
+<AnchorPane id="AnchorPane" maxHeight="500.0" maxWidth="700.0" minHeight="500.0" minWidth="700.0" prefHeight="500.0" prefWidth="700.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="practicasprofesionaleslis.controlador.coordinador.FXMLListaOrganizacionesVinculadasController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#18529d" height="60.0" stroke="#18529d" strokeType="INSIDE" width="728.0" />
+      <Label layoutX="14.0" layoutY="7.0" prefHeight="46.0" prefWidth="661.0" text="Seleccione una organización vinculada" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="30.0" />
+         </font>
+      </Label>
+      <ListView fx:id="lstOrganizacionesVinculadas" layoutX="26.0" layoutY="85.0" prefHeight="316.0" prefWidth="649.0" />
+      <Button layoutX="551.0" layoutY="424.0" mnemonicParsing="false" onAction="#clicBtnCancelar" style="-fx-background-color: #28ad56;" text="Cancelar" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="25.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
