--- a/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/coordinador/FXMLRegistrarResponsableProyecto.fxml
+++ b/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/coordinador/FXMLRegistrarResponsableProyecto.fxml
@@ -1,11 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.shape.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.coordinador.FXMLRegistrarResponsableProyectoController">
-    
+
+<AnchorPane id="AnchorPane" maxHeight="500.0" maxWidth="700.0" minHeight="500.0" minWidth="700.0" prefHeight="500.0" prefWidth="700.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="practicasprofesionaleslis.controlador.coordinador.FXMLRegistrarResponsableProyectoController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#18529d" height="60.0" stroke="#18529d" strokeType="INSIDE" width="728.0" />
+      <Label layoutX="14.0" layoutY="7.0" prefHeight="46.0" prefWidth="661.0" text="Ingrese los datos del responsable de proyecto" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="30.0" />
+         </font>
+      </Label>
+      <Label layoutX="35.0" layoutY="307.0" text="Correo Electrónico">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="365.0" layoutY="200.0" text="Puesto">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="36.0" layoutY="200.0" text="Apellido Materno">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="365.0" layoutY="97.0" text="Apellido Paterno">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtfCorreoElectronico" layoutX="36.0" layoutY="339.0" prefHeight="39.0" prefWidth="630.0" promptText="marioalberto@hightek.com">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtfPuesto" layoutX="365.0" layoutY="233.0" prefHeight="39.0" prefWidth="300.0" promptText="Director ejecutivo">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtfApellidoMaterno" layoutX="35.0" layoutY="233.0" prefHeight="39.0" prefWidth="300.0" promptText="Pérez">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtfApellidoPaterno" layoutX="365.0" layoutY="134.0" prefHeight="39.0" prefWidth="300.0" promptText="Hernández">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </TextField>
+      <Label layoutX="35.0" layoutY="97.0" text="Nombre">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtfNombre" layoutX="35.0" layoutY="134.0" prefHeight="39.0" prefWidth="300.0" promptText="Mario Alberto">
+         <font>
+            <Font name="Gill Sans MT" size="18.0" />
+         </font>
+      </TextField>
+      <Button layoutX="455.0" layoutY="416.0" mnemonicParsing="false" onAction="#clicBtnCancelar" style="-fx-background-color: #28ad56;" text="Cancelar" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="25.0" />
+         </font>
+      </Button>
+      <Button layoutX="122.0" layoutY="416.0" mnemonicParsing="false" onAction="#clicBtnGuardar" style="-fx-background-color: #28ad56;" text="Guardar" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="25.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
