--- a/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/estudiante/FXMLFormatoEvaluacionOV.fxml
+++ b/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/estudiante/FXMLFormatoEvaluacionOV.fxml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.shape.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.estudiante.FXMLFormatoEvaluacionOVController">
-    
+<AnchorPane id="AnchorPane" maxHeight="400.0" maxWidth="700.0" minHeight="400.0" minWidth="700.0" prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.estudiante.FXMLFormatoEvaluacionOVController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#18529d" height="60.0" stroke="#18529d" strokeType="INSIDE" width="728.0" />
+      <Label fx:id="lblEncabezado" layoutX="14.0" layoutY="7.0" prefHeight="46.0" prefWidth="661.0" text="Formato de Autoevaluación" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="30.0" />
+         </font>
+      </Label>
+      <Button layoutX="183.0" layoutY="137.0" mnemonicParsing="false" onAction="#clicBtnDescargar" prefHeight="55.0" prefWidth="350.0" style="-fx-background-color: #28ad56;" text="Descargar" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="30.0" />
+         </font>
+      </Button>
+      <Button layoutX="183.0" layoutY="247.0" mnemonicParsing="false" onAction="#clicBtnCancelar" prefHeight="55.0" prefWidth="350.0" style="-fx-background-color: #28ad56;" text="Cancelar" textFill="WHITE">
+         <font>
+            <Font name="Gill Sans MT" size="30.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
