--- a/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/coordinador/FXMLBuscarProyecto.fxml
+++ b/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/coordinador/FXMLBuscarProyecto.fxml
@@ -1,11 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.coordinador.FXMLBuscarProyectoController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="practicasprofesionaleslis.controlador.coordinador.FXMLBuscarProyectoController">
+   <children>
+      <AnchorPane id="AnchorPane" layoutX="10.0" layoutY="10.0" maxHeight="400.0" maxWidth="700.0" minHeight="400.0" minWidth="700.0" prefHeight="400.0" prefWidth="700.0">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#18529d" height="60.0" layoutX="-19.0" layoutY="-16.0" stroke="#18529d" strokeType="INSIDE" width="728.0" />
+            <Label prefHeight="46.0" prefWidth="661.0" text="BUSCAR PROYECTO" textFill="WHITE">
+               <font>
+                  <Font name="Gill Sans MT" size="26.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtfNombreProyecto" layoutX="45.0" layoutY="148.0" prefHeight="39.0" prefWidth="611.0" promptText="Ej: Chatbot para un sistema de paquetería">
+               <font>
+                  <Font name="Gill Sans MT" size="18.0" />
+               </font>
+            </TextField>
+            <Label layoutX="45.0" layoutY="109.0" text="Nombre del proyecto">
+               <font>
+                  <Font name="Gill Sans MT" size="18.0" />
+               </font>
+            </Label>
+            <Button layoutX="168.0" layoutY="268.0" mnemonicParsing="false" onAction="#clicBtnBuscar" style="-fx-background-color: #28ad56;" text="Buscar" textFill="WHITE">
+               <font>
+                  <Font name="Gill Sans MT" size="25.0" />
+               </font>
+            </Button>
+            <Button layoutX="374.0" layoutY="268.0" mnemonicParsing="false" onAction="#clicBtnCancelar" style="-fx-background-color: #28ad56;" text="Cancelar" textFill="WHITE">
+               <font>
+                  <Font name="Gill Sans MT" size="25.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
