--- a/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/profesoree/FXMLEvaluarDocumento.fxml
+++ b/PracticasProfesionalesLIS/src/practicasprofesionaleslis/vista/profesoree/FXMLEvaluarDocumento.fxml
@@ -1,11 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="practicasprofesionaleslis.controlador.profesoree.FXMLEvaluarDocumentoController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="practicasprofesionaleslis.controlador.profesoree.FXMLEvaluarDocumentoController">
+   <children>
+      <AnchorPane id="AnchorPane" layoutX="10.0" layoutY="10.0" maxHeight="490.0" maxWidth="700.0" minHeight="490.0" minWidth="700.0" prefHeight="490.0" prefWidth="700.0">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#18529d" height="60.0" layoutX="-18.0" layoutY="-16.0" stroke="#18529d" strokeType="INSIDE" width="718.0" />
+            <Label layoutX="14.0" prefHeight="46.0" prefWidth="342.0" text="EVALUAR DOCUMENTO" textFill="WHITE">
+               <font>
+                  <Font name="Gill Sans MT" size="30.0" />
+               </font>
+            </Label>
+            <Button layoutX="76.0" layoutY="369.0" mnemonicParsing="false" onAction="#clicBtnCargarFoto" style="-fx-background-color: #28ad56;" text="Calificar" textFill="WHITE">
+               <font>
+                  <Font size="25.0" />
+               </font>
+            </Button>
+            <TextField fx:id="txtfCorreoInstitucional" layoutX="395.0" layoutY="265.0" prefHeight="39.0" prefWidth="290.0" promptText="Correo Institucional">
+               <font>
+                  <Font name="Gill Sans MT" size="18.0" />
+               </font>
+            </TextField>
+            <Button layoutX="451.0" layoutY="369.0" mnemonicParsing="false" onAction="#clicBtnGuardar" style="-fx-background-color: #28ad56;" text="Cancelar" textFill="WHITE">
+               <font>
+                  <Font name="Gill Sans MT" size="25.0" />
+               </font>
+            </Button>
+            <Label layoutX="26.0" layoutY="103.0" prefHeight="46.0" prefWidth="264.0" text="Inicia: ">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="379.0" layoutY="103.0" prefHeight="46.0" prefWidth="264.0" text="Valor: ">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="26.0" layoutY="149.0" prefHeight="46.0" prefWidth="264.0" text="Termina: ">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="379.0" layoutY="149.0" prefHeight="46.0" prefWidth="264.0" text="Valor maximo: ">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Button layoutX="56.0" layoutY="206.0" mnemonicParsing="false" text="PDF">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <Label layoutX="72.0" layoutY="56.0" prefHeight="46.0" prefWidth="264.0" text="&quot;&quot;">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
